fixed body margin on mobile

--- a/src/frontend/components/app_assets/app_assets.css
+++ b/src/frontend/components/app_assets/app_assets.css
@@ -146,6 +146,9 @@ body {
     .mid_col { grid-area: mid_col; }
 
 @media (max-width: 1280px){
+    body{
+        margin-right: 10px;
+    }
     .grid-container {
         display: grid;
         grid-template-columns: 0.9fr 1.1fr 1.2fr 0.8fr;
@@ -181,7 +184,7 @@ body {
         grid-template-rows: 0.3fr 0.8fr 1.2fr 2fr 1.3fr 0.4fr;
         gap: 0px 0px;
         justify-items: center;
-        margin-left: 25px;
+        
         padding: 0;
         /* margin-left: 12%; */
         grid-template-areas:
